# chess-cpp

./: CMakeLists.txt  Readme.txt  globals.hpp  main.cpp
board/: Board.cpp  Board.hpp
enums/: Status.cpp
game/: Game.cpp  Game.hpp
helper/: FenHelper.cpp  FenHelper.hpp
lib/SFML_UNIX/include/SFML/: Config.hpp  GpuPreference.hpp  Graphics.hpp  Main.hpp  OpenGL.hpp  System.hpp  Window.hpp
lib/SFML_UNIX/include/SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  ConvexShape.hpp  Drawable.hpp  Export.hpp  Font.hpp  Glsl.hpp  Glsl.inl  Glyph.hpp  Image.hpp  PrimitiveType.hpp  Rect.hpp  Rect.inl  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  View.hpp
lib/SFML_UNIX/include/SFML/System/: Clock.hpp  Err.hpp  Export.hpp  FileInputStream.hpp  InputStream.hpp  Lock.hpp  MemoryInputStream.hpp  Mutex.hpp  NativeActivity.hpp  NonCopyable.hpp  Sleep.hpp  String.hpp  String.inl  Thread.hpp  Thread.inl  ThreadLocal.hpp  ThreadLocalPtr.hpp  ThreadLocalPtr.inl  Time.hpp  Utf.hpp  Utf.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl
lib/SFML_UNIX/include/SFML/Window/: Clipboard.hpp  Context.hpp  ContextSettings.hpp  Cursor.hpp  Event.hpp  Export.hpp  GlResource.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  Sensor.hpp  Touch.hpp  VideoMode.hpp  Vulkan.hpp  Window.hpp  WindowBase.hpp  WindowHandle.hpp  WindowStyle.hpp
lib/SFML_UNIX/lib/cmake/SFML/: SFMLConfig.cmake  SFMLConfigDependencies.cmake
piece/: Piece.cpp  Piece.hpp
prompt/: PiecePromotionPrompt.cpp  PiecePromotionPrompt.hpp
texture/: CustomTexture.cpp  CustomTexture.hpp
